Fixed loading spinner logic and centered it in frame container. Updated readme details and spacing.

--- a/client/src/Components/loadingspinner.css
+++ b/client/src/Components/loadingspinner.css
@@ -1,13 +1,11 @@
 .loading-spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 10;
     margin: 0 auto;
+    width: 1280px;
+    height: 720px;
 }
 
 .spinner {
